--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -131,11 +131,11 @@ error._free_msg={0}
 error.almenouno.empty=almeno uno dei campi è obbligatorio
 error.atleast_one_empty=È necessario esprimere una valutazione per ogni campo
 error.autocertificazione_non_selezionabile=Non è possibile selezionare la modalità di verifica "autocertificazione" per gli evento di tipologia divertda da "convegno/congresso"
-error.campi_con_errori_azione_ruoliATTIVITA_DI_RICERCA=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - almeno una figura partecipante per azione
-error.campi_con_errori_azione_ruoliAUDIT_CLINICO_ASSISTENZIALE=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - almeno una figura partecipante per fase \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
+error.campi_con_errori_azione_ruoliATTIVITA_DI_RICERCA=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti
+error.campi_con_errori_azione_ruoliAUDIT_CLINICO_ASSISTENZIALE=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
 error.campi_con_errori_azione_ruoliGRUPPI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per fase \n - almeno una figura partecipante per fase \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
-error.campi_con_errori_azione_ruoliPROGETTI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un responsabile per azione \n - almeno una figura partecipante per azione
-error.campi_con_errori_azione_ruoliTRAINING_INDIVIDUALIZZATO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per azione \n - almeno una figura tutor e una partecipante per azione \n - minimo 1 ora non frazionabile per le figure partecipante
+error.campi_con_errori_azione_ruoliPROGETTI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un responsabile per azione
+error.campi_con_errori_azione_ruoliTRAINING_INDIVIDUALIZZATO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per azione \n - minimo 1 ora non frazionabile per le figure Partecipante
 error.campi_con_errori_programma_fad=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
 error.campi_mancanti_dettaglio_attivita=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
 error.campi_mancanti_docenti=Alcuni campi dei docenti segnalati in rosso non sono stati inseriti correttamente
@@ -216,6 +216,11 @@ error.troppi_partecipanti_per_tutor=Il numero dei Partecipanti supera il rapport
 error.troppi_responsabili3=I responsabili scientifici devono essere al massimo 3
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
+error.vincolo_partecipanti_tutorATTIVITA_DI_RICERCA=\u00C8 obbligatorio inserire almeno un ruolo Partecipante per fase
+error.vincolo_partecipanti_tutorAUDIT_CLINICO_ASSISTENZIALE=\u00C8 obbligatorio inserire almeno un ruolo Partecipante per fase
+error.vincolo_partecipanti_tutorGRUPPI_DI_MIGLIORAMENTO=\u00C8 obbligatorio inserire almeno un ruolo Partecipante per fase
+error.vincolo_partecipanti_tutorPROGETTI_DI_MIGLIORAMENTO=\u00C8 obbligatorio inserire almeno un ruolo Partecipante per fase
+error.vincolo_partecipanti_tutorTRAINING_INDIVIDUALIZZATO=\u00C8 obbligatorio inserire almeno un ruolo Partecipante e un ruolo Tutor per fase
 error.xml_evento_validation_with_db=Validazione dati evento fallita
 error.xml_validation=Errore di validazione dell'XML
 label.FAD=formazione a distanza (FAD)
@@ -266,6 +271,7 @@ label.allegato_contratti_accordi_convenzioni=Contratti o accordi di altre forme 
 label.allegato_non_inserito=Allegato non inserito
 label.allegato_risposta=Allegato:
 label.altri_finanziamenti=Altre forme di Finanziamento
+label.altri_n_destinatari=... altri {0} destinatari
 label.altro_personale=Altro personale
 label.ambito=Ambito:
 label.ambito_list=Ambito
@@ -420,6 +426,7 @@ label.denominazione_legale_login=Denominazione Legale della struttura richiedent
 label.denominazione_legale_provider=Denominazione Legale del Provider
 label.descrizione_del_progetto=Descrizione del progetto e rilevanza formativa
 label.descrizione_verifica_ricadute_formative=Descrizione verifica ricadute formativa
+label.destinatari=Destinatari
 label.destinatari_evento=Destinatari dell'evento
 label.dettaglio_attivita=Dettaglio Attività
 label.devono_pagare_quota_annuale=Devono pagare la quota annuale
